# agierCompute

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: AgierComputeConfig.cmake.in
docs/: ACE_INVOKE_GUIDE.md  API.md  BACKEND_STATUS.md  PROJECT_SUMMARY.md
examples/: CMakeLists.txt  ace_test.h  benchmark.c  comprehensive_test.c  cuda_test.c  demo.cpp  example_device_enum.c  example_user_kernels.c  gpu_test.c  kernel_tests.c  multi_device_test.c  neural_net.c  opencl_test.c  simple_test.c  test_ai_dtypes.c  test_all_dtypes.c  test_dtype_debug.c  test_dtypes.c  unit_tests.c  user_kernels.c  vulkan_test.c
examples/lib/: ace_test.c  ace_test.h
include/: ace.h
src/: ace_backend_api.h
src/core/: CMakeLists.txt  backend_loader.c  engine.c  engine_backend.c  engine_device.c  engine_internal.h  engine_kernel.c  engine_memory.c
src/cpu/: CMakeLists.txt  cpu_backend.c
src/cuda/: CMakeLists.txt  cuda_backend.c  cuda_backend.h  cuda_device.c  cuda_dtype_table.c  cuda_dtype_table.h  cuda_kernel.c  cuda_kernel_ops_table.c  cuda_kernel_ops_table.h  cuda_memory.c  cuda_type_utils.c
src/opencl/: CMakeLists.txt  opencl_backend.c  opencl_backend.h  opencl_device.c  opencl_dtype_table.c  opencl_dtype_table.h  opencl_kernel.c  opencl_kernel_ops_table.c  opencl_kernel_ops_table.h  opencl_memory.c  opencl_type_utils.c
src/vulkan/: CMakeLists.txt  vulkan_backend.c  vulkan_backend.h  vulkan_device.c  vulkan_device_features.c  vulkan_dtype_table.c  vulkan_dtype_table.h  vulkan_kernel.c  vulkan_kernel_ops_table.c  vulkan_kernel_ops_table.h  vulkan_memory.c  vulkan_type_utils.c
tests/: CMakeLists.txt  benchmark.c  test_api.c  test_backend.c  test_dtype.c  test_kernel.c
